# OrangeD

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: METHODOLOGY.md
benchmarks/results/: bambu_3d_analysis.json  bambu_3d_judge_report.json  bambu_3d_output.md  bambu_3d_route_log.json  benchmark_v0.1.0.json  bosch_ac_analysis.json  bosch_ac_judge_report.json  bosch_ac_output.md  bosch_ac_route_log.json  lg_washer_analysis.json  lg_washer_judge_report.json  lg_washer_output.md  lg_washer_route_log.json
examples/: VISUAL_EXAMPLES.md  quick_start.py  with_ocr_adapter.py
examples/visual/: example1_lg_text_heavy_features.json  example1_lg_text_heavy_output.md  example2_samsung_table_features.json  example2_samsung_table_output.md  example3_bambu_image_only_features.json  example3_bambu_image_only_output.md
oranged/: __init__.py  analyse.py  benchmark.py  cli.py  extract.py  judge.py  router.py
oranged/adapters/: __init__.py  base.py  gemini_adapter.py  glm_adapter.py  paddle_adapter.py  qwen_adapter.py
tests/: test_smoke.py
